# argclass

./: README.md  pyproject.toml
.run/: argclass all test.run.xml
src/argclass/: __init__.py  actions.py  core.py  fields.py  validator.py
test/: test_arg.py
tests/: test_arg.py  test_parser.py  test_validator.py
