# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# https://pip.pypa.io/en/stable/reference/build-system/pyproject-toml/

[project]
name = 'argclass'
version = '0.0.0'
authors = [
]
description = "A data-class-like argparse wrapper"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
keywords = ["CLI"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    'Natural Language :: English',
    "Operating System :: OS Independent",
]

dynamic = ["dependencies"]

[project.urls]
#Homepage = "https://github.com/pypa/sampleproject"
#Issues = "https://github.com/pypa/sampleproject/issues"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

